cabal-version: 3.0
name: hoare
synopsis: Simple tools for communicating sequential processes
description:
    Hoare was right—many concurrent programs can be simply expressed
    as a series of concurrent actors (threads) consuming and producing
    messages. Haskell provides uniquely great tools (green threads and STM)
    for doing so. This package provides:

    - Functions for using bounded STM types like
      `TBQueue` and `TMVar` as /channels/ between threads.

    - A /closeable/ @TBCQueue@ for programs where the input ends.
version: 0.1.2.0
license: Zlib
author: Matt Kline
maintainer: matt@bitbashing.io
category: Concurrency
build-type: Simple
tested-with:  GHC==9.8.4
            , GHC==9.10.2

source-repository head
    type:     git
    location: https://github.com/mrkline/hoare

common shared
    ghc-options: -Weverything
                 -Wno-all-missed-specialisations
                 -Wno-implicit-prelude
                 -Wno-missed-specialisations
                 -Wno-missing-export-lists
                 -Wno-missing-import-lists
                 -Wno-missing-kind-signatures
                 -Wno-missing-local-signatures
                 -Wno-missing-role-annotations
                 -Wno-missing-safe-haskell-mode
                 -Wno-monomorphism-restriction
                 -Wno-safe
                 -Wno-type-defaults
                 -Wno-unsafe
                 -threaded
                 -fno-ignore-asserts
    default-language: Haskell2010
    default-extensions: BangPatterns,
                        DerivingStrategies,
                        ImportQualifiedPost,
                        LambdaCase,
                        OverloadedRecordDot,
                        RecordWildCards,

library
    import: shared
    exposed-modules: Control.Concurrent.Channel
                     Control.Concurrent.Channel.Endless
                     Control.Concurrent.Channel.Try
                     Control.Concurrent.TBCQueue

    hs-source-dirs: lib
    build-depends: base >=4.4 && < 5,
                   async >= 2.2 && < 3,
                   deepseq >= 1.5 && < 2,
                   stm >= 2.5 && < 3,
